# teacher

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SDK_USAGE_REVIEW.md  pyproject.toml
docs/: typer-one-file-per-command.md
docs/elevenlabs/: elevenlabs-prompting-guide.md  elevenlabs-sdk-reference.md  model-controls.md
paper_output/: preamble.md  section_conclusion.md  section_introduction.md  section_method.md  section_results.md  subsection_algorithm.md  subsection_motivation.md
src/teacher/: __init__.py  agents.py  dev.py  main.py  utils.py
src/teacher/extract/: __init__.py  prompts.py
src/teacher/narrate/: __init__.py  prompts.py
src/teacher/narrate/prompts/few-shot-examples/calm/: 009-variational-regularization.md  010-posterior-collapse-prevention.md  018-energy-loss.md  019-energy-transformer-head.md  020-discrete-token-input.md  021-lm-evaluation-principles.md  022-brier-score.md  023-brier-estimator.md  024-temperature-sampling-exact.md  025-temperature-two-stage.md  026-temperature-sampling-cost.md  027-batch-approximation.md  028-experiments-settings.md  029-main-results.md  030-training-dynamics.md
src/teacher/narrate/prompts/system/: narrative.md
src/teacher/reader/: __init__.py  prompts.py
src/teacher/reader/prompts/system/: reader.md
src/teacher/speak/: __init__.py  audio.py
src/teacher/speaker/: __init__.py  audio.py
src/teacher/writer/: __init__.py  prompts.py
src/teacher/writer/prompts/system/: writer-elevenlabs.md
tests/: test_audio.py  test_utils.py
tickets/: 001-agent-workflow.md
(+9 files in other folders)
