[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teacher"
version = "0.1.0"
description = "Multi-agent research paper to audio transcript system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "python-dotenv>=1.0.0",
    "typer>=0.20.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.72.1",
    "pydantic>=2.12.4",
    "elevenlabs>=2.23.0",
]

[project.scripts]
teacher = "teacher.__init__:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.4",
]
